dashboard graph range and unit changes

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -44,7 +44,7 @@
     "prompt": "python.exe"
   },
   "Credentials": {
-    "username": "cmrit_vijayaraghavan",
-    "password": "pWs0Tnd86AkBF"
+    "username": "cmrit_v",
+    "password": "6HNTv0sfy4CbL"
   }
 }
